[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "disaster-relief-logistics"
version = "1.0.0"
description = "Disaster Relief Logistics — OpenEnv RL environment"
requires-python = ">=3.11"
dependencies = [
    "openenv-core>=0.2.2",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "fastmcp>=3.0.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "httpx>=0.24.0",
    "websockets>=12.0",
    "ortools>=9.0.0",
    "huggingface_hub>=0.22.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
